src/objects/QPMS__Initial_Reporter__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Address_Line_1__c</fullName>
        <description>Address-Line 1</description>
        <inlineHelpText>Address-Line 1</inlineHelpText>
        <label>Address-Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Address_Line_2__c</fullName>
        <description>Address-Line 2</description>
        <inlineHelpText>Address-Line 2</inlineHelpText>
        <label>Address-Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_Address__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__Establishment_Name__c</fullName>
        <description>Establishment Name</description>
        <inlineHelpText>Establishment Name</inlineHelpText>
        <label>Establishment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__First_Given_Name__c</fullName>
        <description>First/Given Name</description>
        <inlineHelpText>First/Given Name</inlineHelpText>
        <label>First/Given Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <formula>TEXT( QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c )</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Health_Professional__c</fullName>
        <label>Health Professional?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Init_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Init_State_Province_or_Territory__c</fullName>
        <label>State, Province, or Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QPMS__Init_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Reporter_Also_Sent_Report_to_FDA__c</fullName>
        <label>Initial Reporter Also Sent Report to FDA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Middle_Name__c</fullName>
        <description>Middle Name</description>
        <inlineHelpText>Middle Name</inlineHelpText>
        <label>Middle Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Other Health Care Professional</fullName>
                </value>
                <value>
                    <fullName>Patient/Consumer</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Physician Assistant</fullName>
                </value>
                <value>
                    <fullName>Risk Manager</fullName>
                </value>
                <value>
                    <fullName>Third Party Servicer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Phone__c</fullName>
        <label>Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Post_Office_or_Zip_Code__c</fullName>
        <description>Post Office or Zip Code</description>
        <inlineHelpText>Post Office or Zip Code</inlineHelpText>
        <label>Post Office or Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the value of regulatory report value</description>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Initial Reporter</relationshipLabel>
        <relationshipName>Initial_Reporter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Reporter_Title__c</fullName>
        <description>Title (e.g., Mr., Ms.)</description>
        <inlineHelpText>Title (e.g., Mr., Ms.)</inlineHelpText>
        <label>Title (e.g., Mr., Ms.)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Initial Reporter</label>
    <nameField>
        <label>Initial Reporter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initial Reporter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>